[package]
name = "camt_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
select = "0.6.0"
xml-rs = "0.8.13"
serde = { version = "1.0", features = ["derive"] }
minidom = "0.15.2"
clap = "4.3.0"
